Made menu mobile responsive, fixed overlapping content, mobile-friendly hours fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /******************************************
 /* BASE STYLES
 /*******************************************/
@@ -23,10 +22,6 @@ nav {
   padding: 0.5rem;
 }
 
-/* h1, h2, h3, h4, h5, h6 {
-  font-weight: bold;
-} */
-
 h1 {  font-size: 6rem;}
 h2 {  font-size: 4rem;}
 /* h3 {  font-size: 1.872rem;} */
@@ -45,12 +40,10 @@ a:hover {
 
 ul, li {
   list-style: none;
-  /* display: inline; */
 }
 
 .button, .button a {
   color: white;
-  /* opacity: 80%; */
   padding: .5rem;
 }
 
@@ -63,12 +56,11 @@ ul, li {
 h4, 
 strong,
 strong > a {
-  /* color: orangered; */
   color: #FF452B;
 }
 
-.button, .contrast-bg-color {
-  background: darkgoldenrod;
+.button, .contrast-bg-color, .sidenav {
+  background: #B8860B;
 }
 
 .logo-font, h1, h2 {
@@ -89,14 +81,7 @@ strong > a {
   background-size: cover; 
   background-repeat: no-repeat;
   background-position: center;
-  /* width: fit-content; */
-  /* max-height: 100vh;  */
-  /* min-height: 70vh; */
-  height: 95vh;
-  /* min-width: 50%; */
-  /* font-size: 3rem; */
-  /* padding: auto; */
-  /* text-align: center; */
+  min-height: 95vh;
 }
 
 #welcome * {
@@ -108,28 +93,18 @@ strong > a {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
-  height: 95vh;
+  min-height: 95vh;
   padding: 2.5vh;
 }
 
 #about > section {
-  /* background: white; */
-  /* opacity: 10%; */
-  /* linear-gradient(90deg, white, gray, black); */
-  /* background: linear-gradient(to bottom, transparent, black); */
   background-image: linear-gradient(to bottom, rgba(61,30,2,.7), rgba(0,0,0,.1));
 }
 
 #menu {
-  height: 90vh;
+  min-height: 90vh;
   padding: 5vh 0;
   text-align: center;
-  /* background: white;
-  color: black; */
-}
-
-#menu a {
-  /* color: black; */
 }
 
 #menu-breakfast img,
@@ -155,22 +130,13 @@ strong > a {
   display: inline;
 }
 
-
 /******************************************
 /* LAYOUT
 /*******************************************/
 
-/* body {
-  margin: 1rem;
-} */
-
-/* header {
-  margin-bottom: 1rem;
-} */
-
-/* .margin {
-  margin: 2.5% 5%;
-} */
+main img {
+  height: 100%;
+}
 
 nav {
   margin: 0 !important;
@@ -178,7 +144,6 @@ nav {
 
 .flex {
   display: flex;
-  /* flex-wrap: wrap; */
 }
 
 .flex-col {
@@ -211,14 +176,13 @@ nav {
 }
 
 .space-between {
-  /* display: flex; */
   justify-content: space-between;
-  /* align-content: space-between; */
   column-gap: 5rem;
 }
 
 nav {
   justify-content: space-between;
+  align-items: center;
 }
 
 nav ul {
@@ -227,6 +191,7 @@ nav ul {
   align-items: center;
   flex-basis: 90%;
   gap: 1rem;
+  flex-wrap: wrap;
 }
 
 #logo {
@@ -239,6 +204,10 @@ nav ul {
   margin: 5%; /* 0 15% 5% 15% */
 }
 
+main ul {
+  column-gap: 2rem;
+}
+
 #menu nav ul {
   column-gap: 2rem;
   flex-wrap: wrap;
@@ -246,11 +215,43 @@ nav ul {
 }
 
 #location {
-  height: 95vh; 
+  min-height: 95vh; 
 }
 
 #location > * {
   padding: 2rem;
+}
+
+.hours {
+  justify-content: space-between;
+  row-gap: 3rem;
+}
+
+/* The side navigation menu */
+.sidenav {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  right: 0;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding: 2rem 0; /* Place content down from the top */
+  margin: 3rem 0; /* Place content down from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: .5rem .5rem .5rem 2rem;
+  transition: 0.3s;
+}
+
+.closebtn {
+  font-size: 2rem;
 }
 
 /******************************************
@@ -258,10 +259,42 @@ nav ul {
 /*******************************************/
 
 @media (min-width: 1000px) {
+
+  .hide {
+    display: none;
+  }
+
+  .sidenav {
+    position: unset;
+    right: unset;
+    top:unset;
+    z-index: unset;
+    overflow-x: unset;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 0;
+    padding: 0; 
+  }
+  
+  #mySidenav {
+    width: 100%;
+  }
+  
   #menu nav ul {
     column-gap: 5rem;
     justify-content: center;
   }
+
+  .hours {
+    flex-direction: row;
+    justify-content: space-between;
+    column-gap: 5rem;
+  }
+
+  main ul {
+    column-gap: 6rem;
+  }
+
 }
 
 /******************************************
